--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,13 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "fs": "0.0.1-security",
+    "init": "^0.1.2",
     "nodemon": "^2.0.18",
-    "pg": "^8.7.3"
+    "path": "^0.12.7",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.21.2",
+    "sequelize-cli": "^6.4.1"
   }
 }
