--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -14,13 +14,11 @@
     "express": "^4.18.1",
     "fs": "0.0.1-security",
     "init": "^0.1.2",
+    "nodemon": "^2.0.18",
     "path": "^0.12.7",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.2",
     "sequelize-cli": "^6.4.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.19"
   }
 }
